...
  LaunchedEffect(user) { providerViewModel.getProvider(userId) }

  Scaffold(
      topBar = {
        TopAppBarInbox(
            title = "Modify your profile information",
            testTagTitle = "titleModifyProvider",
            leftButtonForm = Icons.AutoMirrored.Filled.ArrowBack,
            leftButtonAction = { navigationActions.goBack() })
      },
      content = { padding ->
        Column(
            modifier =
...
      onValueChange = { newName = it },
      label = "Name",
      placeholder = "Enter your new name",
      isValueOk = okNewName,
      leadingIcon = Icons.Default.AccountCircle,
      leadingIconDescription = "Name Icon",
      testTag = "newNameInputField",
      errorMessage = "Your name must have at least 2 characters and less than 50",
      errorTestTag = "nameErrorMessage",
      maxLines = 2)

  Spacer(modifier = Modifier.height(10.dp))
  CustomOutlinedTextField(
      value = newCompanyName,
      onValueChange = { newCompanyName = it },
      label = "Company Name",
      placeholder = "Enter your new Company name",
      isValueOk = okNewCompanyName,
      leadingIcon = Icons.Default.AccountCircle,
      leadingIconDescription = "Company Name Icon",
      testTag = "newCompanyNameInputField",
      errorMessage = "Your company name must have at least 2 characters",
      errorTestTag = "companyNameErrorMessage",
      maxLines = 2)

  Spacer(modifier = Modifier.height(10.dp))
  ServiceDropdownMenu(selectedService = newService, onServiceSelected = { newService = it })

  Spacer(modifier = Modifier.height(10.dp))
...
      onValueChange = { newPhoneNumber = it },
      label = "Phone number",
      placeholder = "Enter your new phone number",
      isValueOk = okNewPhoneNumber,
      leadingIcon = Icons.Default.Phone,
      leadingIconDescription = "Phone Number Icon",
      testTag = "newPhoneNumberInputField",
      errorMessage = "Your phone number name must have at least 7 characters",
      errorTestTag = "newPhoneNumberErrorMessage",
      maxLines = 1)

  Spacer(modifier = Modifier.height(10.dp))
  LocationDropdown(
      locationQuery = newLocation,
      onLocationQueryChange = { locationViewModel.setQuery(it) },
...
      locationSuggestions = locationSuggestions.filterNotNull(),
      userLocations = user?.locations ?: emptyList(),
      onLocationSelected = { selectedLocation = it },
      requestLocation = null,
      backgroundColor = colorScheme.background,
      isValueOk = okNewLocation,
      testTag = "newLocationInputField")

  Spacer(modifier = Modifier.height(10.dp))
  LanguageDropdownMenu(
      selectedLanguages = newLanguage,
      onLanguageSelected = { language, isChecked ->
        newLanguage =
...
      onValueChange = { newDescription = it },
      label = "Description",
      placeholder = "Enter your new description",
      isValueOk = okNewDescription,
      leadingIcon = Icons.Default.Info,
      leadingIconDescription = "Description Icon",
      testTag = "newDescriptionInputField",
      errorMessage = "Your description name must not be empty",
      errorTestTag = "newDescriptionErrorMessage",
      textAlign = TextAlign.Start,
      maxLines = 7)

  Spacer(modifier = Modifier.height(20.dp))
  SaveButton(
      onClick = {
...
  var expanded by remember { mutableStateOf(false) }
  val servicesList = Services.entries

  ExposedDropdownMenuBox(
      expanded = expanded,
      onExpandedChange = { expanded = !expanded },
      modifier = Modifier.fillMaxWidth().testTag("newServiceInputField")) {
        // The read-only text field displaying the selected service
        TextField(
            readOnly = true,
            value = Services.format(selectedService),
            onValueChange = {},
            label = { Text("Select Service") },
...
